--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,4 +11,4 @@ spring.h2.console.enabled=true
 # Ejecuta data.sql luego de la inicializacion de hibernate
 spring.jpa.defer-datasource-initialization=true
 
-resource-cliente-url=http://localhost:8081/cuentas
+resource-cliente-url=http://ms-cuenta:8081/cuentas
