--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,3 +12,7 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
 resource-cliente-url=http://ms-cuenta:8081/cuentas
+
+eureka.client.serviceUrl.defaultZone=http://ms-eureka:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=ms-movimiento
