--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
 resource-cliente-url=http://localhost:8081/cuentas
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress=true
+spring.application.name=ms-movimiento
